Fix overflow issues on messenger chatbox

--- a/src/components/generalNotifs/generalNotifs.css
+++ b/src/components/generalNotifs/generalNotifs.css
@@ -11,7 +11,7 @@
 }
 
 .genNotifDropDown { 
-  width: 265px;
+  width: 260px;
   position: absolute;
   top: 50px;
   right: 0;
