--- a/src/components/newMsgNotifs/newMsgNotifs.css
+++ b/src/components/newMsgNotifs/newMsgNotifs.css
@@ -23,7 +23,7 @@
   right: 0;
   background-color: var(--searchBarDarkish);
   border-radius: 5px;
-  width: 265px;
+  width: 260px;
 }
 
 .openMessenger {
